--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <span>LOCAL</span>
             </div>
             <div class="item-botao">
-                <a href="LINK_WHATSAPP" target="_blank" class="btn-circular">✅</a>
+                <a href="https://forms.gle/V55jTFj78v4vdPP88" target="_blank" class="btn-circular">✅</a>
                 <span>CONFIRME SUA PRESENÇA</span>
             </div>
             <div class="item-botao">
@@ -80,4 +80,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
