--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <audio id="som-clique" src="https://www.soundjay.com/buttons/sounds/button-37a.mp3"></audio>
+    <audio id="som-clique" src="silencio.mp3"></audio>
     <audio id="som-porta" src="porta_abrindo.mp3"></audio>
     <audio id="musica-festa" src="musica_festa.mp3" loop></audio>
 
